# shogun

./: CMakeLists.txt  README.md
assets/: vocabulary.json
src/: app.cpp  app.hpp  main.cpp
src/core/: args.cpp  args.hpp  filepaths.cpp  filepaths.hpp  globals.hpp  json.cpp  json.hpp
src/io/: kanji.cpp  kanji.hpp
src/utils/: args.cpp  args.hpp  string.cpp  string.hpp
